client/src/components/landingpage.scss
/* ... */
#one {
  padding: 20px 60px 50px 40px;

  .img-content {
    margin-right: 15%;
  }

  @include media-breakpoint-down(sm) {
    flex-direction: column-reverse;
    padding-top: 65px;
    padding-bottom: 35px;
  }
  @media (max-width: 430px) {
    .img-content {
      align-self: center;
      margin-right: 0%;
      width: 70%;
    }
    padding-top: 30px;
    padding-right: 0px;
    padding-left: 0px;
  }

}
#two {
  flex-direction: row-reverse;
  padding: 50px 0;
  border-top: 1px solid #ff851a;
  border-bottom: 1px solid #ff851a;

  .img-content {
  margin-right: 6%;
  }

  .text-content {
    margin-right: 7%;
  }

  @include media-breakpoint-down(sm) {
    flex-direction: column-reverse;
    border: none;
    padding: 35px 0 35px 0;
  }

  @media (max-width: 430px) {
    .img-content {
      margin-right: 0%;
        align-self: center;
        margin-right: 0%;
        width: 80%;
      }
      .text-content {
        margin-right: 0%;
    }
  }
}

#three {
  padding: 60px 0 100px 0;

  .text-content {
    padding-left: 40px;
    padding-right: 40px;
  }

  .post-example {
    margin-left: 30px;
    margin-right: 110px;
  }

  @include media-breakpoint-down(sm) {
    flex-direction: column-reverse;
    padding-top: 35px;
    padding-bottom: 110px;
  }
  @media (max-width: 430px) {
    .text-content {
      padding-left: 0px;
      padding-right: 0px;
    }
    .post-example {
      margin-left: 0px;
      margin-right: 0px;
    }
    .img-content {
        align-self: center;
        width: 65%;
      }
  }
}

.upper-content-section {
  width: 100%;
  display: flex;

  @include media-breakpoint-down(sm) {
    display: flex;
    flex-direction: column;
  }

  .text-content {
    align-self: center;
    width: 100%;
  }

  .category-example {
    height: 280px;
    width: 269px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
    @media (max-width: 430px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 380px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 325px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
  }

  .review-example {
    height: 200px;
    width: 355px;
    box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.4);
    @media (max-width: 430px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 380px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 325px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
  }

  .post-example {
    height: 292px;
    width: 263px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    @media (max-width: 430px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 380px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
    @media (max-width: 325px) {
      object-fit: contain;
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
  }

  h3 {
    font-family: "Nunito", sans-serif;
    color: #ff851a;
    font-size: 30px;
    font-weight: bold;

    @include media-breakpoint-down(sm) {
      text-align: center;
      font-size: 30px;
      line-height: 41px;
    }
  }

  p {
    padding: 5px;
    font-family: "Nunito", sans-serif;
    color: #494949;
    font-size: 20px;
    line-height: 27px;
    text-align: left;

    @include media-breakpoint-down(sm) {
      font-size: 18px;
    }
  }
}

/////////// MIDDLE CONTENT ///////////

.middle-content {
  border-top: 1px solid #979797;
  border-bottom: 1px solid #979797;

  @include media-breakpoint-down(sm) {
    margin: 0 auto;
    width: 90%;
    border-top: 2px solid #979797;
    border-bottom: 2px solid #979797;
  }

  h2 {
    text-align: center;
    margin: 30px auto;
    padding: 20px 0;
    color: #ff851a;
    font-family: "Nunito", sans-serif;
    font-weight: bold;
    font-size: 40px;
    line-height: 54px;
    @include media-breakpoint-down(sm) {
      font-size: 35px;
    }
    @media (max-width: 380px) {
      font-size: 30px;
    }
  }

  h3 {
    color: #ff851a;
    text-align: left;
    font-family: "Nunito", sans-serif;
    font-size: 30px;
    line-height: 41px;
    @include media-breakpoint-down(sm) {
      font-size: 25px;
    }
    @media (max-width: 380px) {
      font-size: 22px;
    }
  }
  p {
    font-family: "Nunito", sans-serif;
    color: #494949;
    font-size: 20px;
    line-height: 27px;
    text-align: left;
  }
}

.middle-content-section {
  @include media-breakpoint-down(sm) {
    margin-top: 40px;
  }
}

.middle-content-main {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  padding: 0 13%;
  padding-bottom: 75px;

  .iphone-div {
    align-self: center;
  }

  @include media-breakpoint-down(sm) {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 0 4%;
  }
}

.iphone-img {
  width: 200px;
  height: 400px;

  @include media-breakpoint-down(sm) {
    height: 320px;
    width: 165px;
  }
}

.middle-content-main2 {
  padding-left: 88px;

  @include media-breakpoint-down(sm) {
    padding-left: 0px;
  }

  @media (max-width: 415px) {
    h3 {
      font-size: 24px;
    }
  }


  .mobile-store {
    margin-top: 25px;
    text-align: left;
    @include media-breakpoint-down(sm) {
      text-align: center;
      margin-bottom: 60px;
    }

    .mobile-store-btn {
      @include media-breakpoint-down(sm) {
        text-align: center;
        height: 43.2px;
        width: 157.61px;
      }
    }
  }
}
/* ... */

